minor chnages - hardcoded year buttons in filters

--- a/xt-app/src/components/filters/index.scss
+++ b/xt-app/src/components/filters/index.scss
@@ -34,6 +34,12 @@
     .filters {
         display: flex;
         flex-direction: column;
-        max-width: 150px;
+
+        .launchYear {
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            width: 150px;
+        }
     }
 }
