--- a/xt-app/src/components/filters/index.scss
+++ b/xt-app/src/components/filters/index.scss
@@ -11,6 +11,12 @@
         margin-bottom: 15px;
     }
 
+    .buttons {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+    }
+
     .heading {
         display: flex;
         justify-content: center;
