--- a/xt-app/src/components/rockets/index.scss
+++ b/xt-app/src/components/rockets/index.scss
@@ -5,16 +5,37 @@
     margin: 10px;
     border-radius: 5px;
     padding: 20px;
+    color: #00f;
+
+    .rocketName {
+        font-weight: bold;
+        margin: 5px 0;
+    }
+
+    .heading {
+        color: #000;
+        font-weight: bold;
+        margin: 0 5px 0 0;
+    }
 
     .launchYear,
     .successFulLaunch,
     .successfulLanding {
         display: flex;
         align-items: center;
+        margin: 5px 0;
     }
 
     .rocketImg {
         width: 100%;
+    }
+
+    .missionNames ul {
+        margin: 0;
+
+        li {
+            margin: 5px 0;
+        }
     }
 
 }
