filter rockets based on selection

--- a/xt-app/src/common/Button/index.scss
+++ b/xt-app/src/common/Button/index.scss
@@ -6,8 +6,16 @@
     margin: 10px;
     width: 40%;
 
+    &.selected {
+        background-color: #7cba01;
+    }
+
     &:focus {
         background-color: #7cba01;
+    }
+
+    &:hover {
+        cursor: pointer;
     }
 }
 
