--- a/xt-app/src/App.css
+++ b/xt-app/src/App.css
@@ -1,10 +1,28 @@
 .App {
   width: 100%;
   max-width: 1440px;
-  margin: 0 auto;
+  margin: 10px auto;
+}
+
+.doneBy {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .center {
   display: flex;
   justify-content: center;
+  margin: 5px 0;
+}
+
+@media screen and (min-width: 700px) {
+  .doneBy {
+    flex-direction: row;
+  }
+
+  .devName {
+    margin-left: 5px;   
+   }
 }
