--- a/xt-app/src/common/Button/index.scss
+++ b/xt-app/src/common/Button/index.scss
@@ -4,7 +4,6 @@
     border: none;
     border-radius: 5px;
     margin: 10px;
-    width: 40%;
 
     &.selected {
         background-color: #7cba01;
@@ -19,7 +18,13 @@
     }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (max-width: 700px) {
+    .button {
+        width: 40%;
+    }
+}
+
+@media screen and (min-width: 1025px) {
     .button {
         width: auto;
     }
